# snake_game

./: CMakeLists.txt  scores.txt
src/: board_view.cpp  board_view.h  main.cpp  score.cpp  score.h  snake_board.cpp  snake_board.h  snake_body.cpp  snake_body.h  snake_logic.cpp  snake_logic.h
